--- a/portfolio_app/public/css/styles.css
+++ b/portfolio_app/public/css/styles.css
@@ -2,6 +2,14 @@
 	font-family: 'Geo Sans';
 	src: url(../fonts/GeosansLight.ttf);
 }
+@font-face{
+	font-family: 'Coolvetiva';
+	src: url(../fonts/coolveticarg.ttf);
+}
+@font-face{
+	font-family: 'Auto';
+	src: url(../fonts/autoradiographic.ttf);
+}
 body{
 	margin: 0;
 	padding: 0;
@@ -9,29 +17,61 @@ body{
 }
 .show-results{
 	height: 100%;
-	width: 100%;
 	font-family: 'Geo Sans'; 
-	font-size: 2rem;
+	font-size: 2.1rem;
 	color: white;
-	padding-left: 10px;
 	padding-right: 10px;
 	background-color: white;
 	color: black;
+}
+.about-text{
+	background: url("http://bit.ly/29nThdW") no-repeat center center fixed;
+}
+.portfolio-text{
+	background: url("http://bit.ly/292wqCt") no-repeat center center fixed;
+}
+.contact-text{
+	background: url("http://bit.ly/29qsWNX") no-repeat center center fixed;
+}
+.about-text, .portfolio-text, .contact-text{	
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: 100% auto;
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
+  padding-left: 10px; 
 }
 .about-page, .portfolio-page, .contact-page{
 	display: inline-block;
 	margin: 5px;
 	padding: 5px;
 	font-family: 'Geo Sans'; 
-	font-size: 1.5rem;
-	color: white;
-	margin-left: 15px;
+	font-size: 2rem;
+	color: black;
 	margin-top: 10px;
 }
 .about-page:hover, .portfolio-page:hover, .contact-page:hover{
-	font-size: 1.8rem;
-	color: yellow;
+	font-size: 2.5rem;
+	text-shadow: 1px 1px #ffc04d;
+	color: black;
 }
 .hidden{
 	display: none;
+}
+.header2{
+	font-family: 'Coolvetiva';
+	padding-left: 10px;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	text-shadow: 1px 1px white;
+	font-size: 50px;
+}
+.about-me, li{
+	width: 38%;
+	margin-left: 15px;
+}
+dt{
+	font-family: 'Auto';
 }
