--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -85,17 +85,24 @@ a:hover, .home-page:hover, .about-page:hover, .portfolio-page:hover, .contact-pa
 	font-size: 50px;
 }
 .about-me, li{
-	width: 38%;
+	width: 50%;
 	margin-left: 15px;
+	text-shadow: 0px .5px white;
+}
+.nav-bar{
+	font-weight: bold;
+	text-shadow: .5px 0px black;
 }
 dt{
 	font-family: 'Auto';
+	float: left;
 }
-dd{
-	padding: 5px;
+iframe{
+	margin-left: 30px;
 }
-dl{
-	margin-top: 10px;
+.dl-horizontal{
+	margin-left: auto;
+	margin-right: auto;
 }
 .motto{
 	font-family: 'Lemon';
@@ -118,5 +125,8 @@ a{
 	width: 100%;
 	margin-left: 10px;
 	font-size: 2.5rem;
+}
+#soon{
+	margin-left: 310px;
 }
 
